@@ -1,3 +1,14 @@
+2007-10-03  Ada Chan  <adachan@apple.com>
+
+        <rdar://problem/5521230> Implement IWebIconDatabase::iconURLForURL in WebKit for windows
+
+        Reviewed by Steve and Brady.
+
+        * Interfaces/IWebIconDatabase.idl:
+        * WebIconDatabase.cpp:
+        (WebIconDatabase::iconURLForURL):
+        * WebIconDatabase.h:
+
 2007-10-02  Sam Weinig  <sam@webkit.org>
 
         Rubber-stamped by Adam Roben.
